# strip-session-prefix

./: .gitignore  .ormolu  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.local  main.hs  session-impl.cabal  session-prefixes.cabal
BSession/: Nat.hs  Parse.hs  Prefix.hs  Syntax.hs
Test/: Prefix.hs
exe/: main.hs
src/: Main.hs
src/BSession/: Linear.hs  Nat.hs  Parse.hs  Prefix.hs  Syntax.hs
test/: Prefix.hs  PrefixSpec.hs
