cabal-version:      3.4
name:               session-impl
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Janek Spaderna
maintainer:         janek.spaderna@pluto.uni-freiburg.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable session-impl
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.19.0.0,
      megaparsec ^>=9.6.1,
    hs-source-dirs:   src
    default-language: GHC2021
