cabal-version:      3.4
name:               session-impl
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Janek Spaderna
maintainer:         janek.spaderna@pluto.uni-freiburg.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable session-impl
    import:           warnings
    main-is:          main.hs
    other-modules:
      BSession.Nat,
      BSession.Parse,
      BSession.Prefix,
      BSession.Syntax,
    -- other-extensions:
    build-depends:
      base ^>=4.19.0.0,
      containers ^>=0.6,
      megaparsec ^>=9.6.1,
      prettyprinter ^>=1.7,
      text ^>=2.1,
      unordered-containers ^>=0.2.20,
    hs-source-dirs:   .
    default-language: GHC2021
