cabal-version:      3.4
name:               session-prefixes
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Janek Spaderna
maintainer:         janek.spaderna@pluto.uni-freiburg.de
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:


common defaults
  build-depends: base ^>=4.19.0.0
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DerivingVia
    LambdaCase
    QuantifiedConstraints
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-unticked-promoted-constructors


common deps
  build-depends:
    containers ^>=0.6,
    hashable ^>= 1.4.3,
    megaparsec ^>=9.6.1,
    prettyprinter ^>=1.7,
    text ^>=2.1,
    unordered-containers ^>=0.2.20,


library
  import: defaults, deps
  hs-source-dirs: src

  exposed-modules:
    BSession.Linear
    BSession.Nat
    BSession.Parse
    BSession.Prefix
    BSession.Syntax


test-suite spec
  import: defaults, deps
  main-is: spec.hs
  hs-source-dirs: test
  type: exitcode-stdio-1.0

  other-modules:
    PrefixSpec

  build-depends:
    session-prefixes,
    hspec ^>= 2.11.7,

  build-tool-depends:
    hspec-discover:hspec-discover,
